[package]
authors = ["Matthew Fornaciari <mattforni@gmail.com>"]
description = "A thin wrapper around file and directory operations designed to remove some of tediousness from IO."
documentation = "http://mattforni.github.io/rust/doc/touch"
homepage = "https://github.com/mattforni/touch"
keywords = ["file", "directory", "fs", "filesystem"]
license = "MIT"
name = "touch"
readme = "README.md"
repository = "https://github.com/mattforni/touch"
version = "0.0.1"

[lib]
name = "touch"
path = "src/lib.rs"

[dependencies]
log = "0"
